fix: align button content

--- a/src/style.css
+++ b/src/style.css
@@ -626,6 +626,8 @@ input[type='number']::-webkit-outer-spin-button {
   cursor: pointer;
   margin-top: calc(var(--spacing) + 10px);
   border: none;
+  font-size: 14px;
+  gap: 0.7rem;
 }
 
 .btn:hover {
@@ -918,7 +920,6 @@ input[type='number']::-webkit-outer-spin-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: min(25%, 35%);
 }
 
 .btn-dropdown-container,
@@ -955,9 +956,11 @@ input[type='number']::-webkit-outer-spin-button {
 
 .dropdown-item {
   display: flex;
+  justify-content: center;
   align-items: center;
   column-gap: 0.5rem;
   padding: 0.3rem 0.3rem 0.3rem 0.2rem;
+  font-size: 12px;
 }
 .dropdown-item:hover {
   background-color: #0c49d2;
